LDEV-4900 Trigger autosave when force completing Assessment activity